fix: do not wrap between icon and text

--- a/src/components/icon-text.module.scss
+++ b/src/components/icon-text.module.scss
@@ -4,4 +4,5 @@
     width: 1rem;
   }
   align-items: center;
+  flex-wrap: nowrap;
 }
